# grimoirelab-toolkit

./: .flake8  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  MANIFEST.in  NEWS  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: cd.yml  changelog.yml  ci.yml  release.yml  tests.yml
grimoirelab/toolkit/: datetime.py  introspect.py
grimoirelab_toolkit/: __init__.py  _version.py  datetime.py  identities.py  introspect.py  uris.py
grimoirelab_toolkit/credential_manager/: __init__.py  __main__.py  aws_manager.py  bw_manager.py  credential_manager.py  exceptions.py  hc_manager.py  secrets_manager_factory.py  utils.py
releases/: 0.2.0.md  0.3.0.md  0.3.1-rc.1.md  0.3.1.md  0.3.2-rc.1.md  0.3.2.md  0.3.3-rc.1.md  0.3.3-rc.2.md  0.3.3.md  0.3.4-rc.1.md  0.3.4.md  0.3.5-rc.1.md  0.3.5.md  0.3.6-rc.1.md  0.3.6.md  0.4.0-rc.1.md  0.4.0-rc.2.md  0.4.0.md  0.4.1-rc.1.md  0.4.1.md  0.4.2-rc.1.md  0.4.2.md  0.4.3-rc.1.md  0.4.3.md  0.4.4-rc.1.md  0.4.4.md  0.4.5-rc.1.md  0.4.5.md  1.0.0-rc.1.md  1.0.0-rc.2.md  1.0.0.md  1.0.1-rc.1.md  1.0.1.md  1.0.10-rc.1.md  1.0.10.md  1.0.11-rc.1.md  1.0.11.md  1.0.12-rc.1.md  1.0.12.md  1.0.13-rc.1.md  (+34 more)
releases/unreleased/: credential-manager.yaml  deprecated-utcfromtimestamp-updated.yml  drop-python-3.6-support.yml  hashicorp-vault-manager.yaml  identity-management-functions.yml  standalone-credential-resolution.yaml
tests/: run_tests.py  test_aws_manager.py  test_bw_manager.py  test_datetime.py  test_hc_manager.py  test_identities.py  test_introspect.py  test_resolve_credentials.py  test_uris.py
