[tool.poetry]
name = "grimoirelab-toolkit"
version = "0.3.1"
description = "Toolkit of common functions used across GrimoireLab"
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-toolkit"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "grimoirelab_toolkit" },
    { include = "tests", format = "sdist" },
]

include = [
    { path = "AUTHORS", format = "sdist" },
    { path = "NEWS", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
coverage = "^5.5"

[build-system]
requires = [
    "poetry>=0.12",
    "setuptools>=30.3.0,<50"
]
build-backend = "poetry.masonry.api"
